# DocGen-API

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh  test_merge.py
api/: main.py
api/api/: dependencies.py
api/api/routers/: __init__.py  auth.py  endpoints.py  jobs.py  logs.py  prompt.py  revisions.py  team.py  team_config.py  traces.py
api/core/: celery_client.py  config.py  database.py  default_config.py  init_db.py  security.py
api/migrations/: env.py
api/migrations/versions/: 1fce86ab1ca5_add_generation_jobs_logs_table.py  2717c8d24cad_add_indices.py  40341b22ea01_add_api_dir_to_generation_jobs.py  407567a09f2f_add_project_name_to_generation_jobs.py  8f596fa12dd3_phase_5_documentation_revisions.py  969705326df4_add_project_grouping_table.py  c7e1f2a3b4d5_team_management_system.py
api/models/: __init__.py  base.py  grouping.py  project.py  prompt.py  revision.py  team.py  team_config.py  team_invitation.py  user.py
api/repositories/: base.py  job.py  prompt.py  revision.py  team.py  team_config.py  user.py
api/schemas/: dashboard.py  job.py  prompt.py  revision.py  team.py  user.py
api/services/: auth_service.py  dashboard_service.py  job_service.py  prompt_service.py  revision_service.py  team_config_service.py  team_service.py  worker_service.py
shared/: __init__.py  db.py  models.py  tracing.py
src/saas_api/: main.py
src/saas_api/api/: dependencies.py
src/saas_api/api/routers/: __init__.py  auth.py  jobs.py  prompt.py  team.py  team_config.py
src/saas_api/core/: config.py  database.py  default_config.py  init_db.py  security.py
src/saas_api/migrations/: env.py
src/saas_api/migrations/versions/: 4632a8f08dec_add_username.py  9d17afd222c3_add_configuration_and_prompt_tables.py  9e292fe203c0_add_generation_jobs_table.py  bce099a46f7f_initial_core_tables.py
src/saas_api/models/: __init__.py  base.py  project.py  prompt.py  team.py  team_config.py  user.py
src/saas_api/repositories/: base.py  job.py  prompt.py  team.py  team_config.py  user.py
src/saas_api/schemas/: project.py  team.py  team_config.py
src/saas_api/services/: auth_service.py  job_service.py  prompt_service.py  team_config_service.py  team_service.py
tests/saas_api/: test_auth.py  test_logs.py  test_revisions.py  test_teams.py
worker/: Dockerfile  celery_app.py  config.py  pyproject.toml  redis_log_handler.py  tasks.py  tracing.py
