[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docgen-worker"
version = "0.1.0"
description = "Celery worker for DocGen-RAG documentation pipeline"
requires-python = ">=3.10"
dependencies = [
    # Task queue
    "celery",
    "redis",
    "watchdog",   # auto-reload celery when source files change

    # Database (sync driver for Celery)
    "sqlalchemy",
    "psycopg2-binary",

    # Settings
    "pydantic-settings",
    "pyyaml",

    # API security deps (needed by api.core.security imported in tasks.py)
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",

    # DocGen pipeline dependencies
    "haystack-ai",
    "weaviate-haystack",
    "sentence-transformers",
    "gitpython",
    "arize-phoenix>=4.0.0",
    "arize-phoenix-evals<3.0.0",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "openinference-instrumentation-haystack",
    "openinference-instrumentation-google-genai",
    "ollama-haystack",
    "google-genai-haystack",
    "accelerate",
    "tree-sitter",
    "tree-sitter-language-pack",
    "gitignore-parser>=0.1.13",
    "scikit-learn",
    "numpy",
]

[tool.setuptools]
packages = {find = {where = [".."], include = ["worker*", "shared*", "src*", "prompts*"]}}
